--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ php:
   - 5.5
 
 before_script:
+  - composer self-update
+  - composer install --no-interaction --prefer-source --dev
   - mysql -e 'create database IF NOT EXISTS myguestbook'
   - mysql myguestbook < src/myguestbook.sql
-  - composer install --prefer-source --dev
 
 script:
-  - phpcs .
-  - phpunit .
+  - ./vendor/bin/phpunit
 
 notifications:
   email: false
