--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - mysql myguestbook < src/myguestbook.sql
 
 script:
-  - ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit .
 
 notifications:
   email: false
