Added code sniffer

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,7 +14,7 @@
 
     <testsuites>
         <testsuite name="Fordnox Test Suite">
-            <directory>./tests/</directory>
+            <directory>./tests/Fordnox/</directory>
         </testsuite>
     </testsuites>
 
