--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source --dev
   - mysql -e 'create database IF NOT EXISTS myguestbook'
-  - mysql myguestbook < src/myguestbook.sql
+  - mysql myguestbook < myguestbook.sql
 
 script:
+  - ./vendor/bin/phpcs lib --standard=PSR2
   - ./vendor/bin/phpunit
 
 notifications:
