--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "phpunit/dbunit": ">=1.2"
+        "phpunit/dbunit": ">=1.2",
+        "squizlabs/php_codesniffer": "1.*"
     },
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": { "Fordnox\\": "lib/" }
     }
 }
