--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,11 @@ before_script:
 
 script:
   - ./vendor/bin/phpcs lib --standard=PSR2
-  - ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit --coverage-clover=coverage.clover
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
 
 notifications:
   email: false
