--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,6 +18,10 @@
         </testsuite>
     </testsuites>
 
+    <logging>
+        <log type="coverage-clover" target="coverage.clover"/>
+    </logging>
+
     <php>
         <var name="DB_DSN" value="mysql:dbname=myguestbook;host=localhost"/>
         <var name="DB_USER" value="root"/>
