--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,7 @@
 tools:
-    external_code_coverage: true
-    
+  external_code_coverage: true
+      timeout: 3600 # Timeout in seconds.
+  php_code_sniffer:
+    enabled: true
+    config:
+      standard: "PSR2"
