--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "phpunit/dbunit": ">=1.2",
-        "squizlabs/php_codesniffer": "1.*"
+        "phpunit/dbunit": ">=1.2"
     },
     "autoload": {
         "psr-4": { "Fordnox\\": "lib/" }
