--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,7 @@
 tools:
-  external_code_coverage: true
-    timeout: 3600
-  php_code_sniffer:
-    enabled: true
-    config:
-      standard: "PSR2"
+    external_code_coverage:
+        timeout: 3600
+    php_code_sniffer:
+        enabled: true
+        config:
+            standard: "PSR2"
